fix: modal layout overflow (#472)

--- a/react/components/form/ArrayFieldTemplate/ItemTransitions.css
+++ b/react/components/form/ArrayFieldTemplate/ItemTransitions.css
@@ -8,7 +8,7 @@
 }
 
 .item-enter-done {
-  padding: 2rem;
+  transform: translateX(18rem);
 }
 
 .item-exit {
